--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-.logo-link {
+.logo-link-header {
   font-family: Raleway;
   font-size: 18px;
   font-weight: 700;
@@ -83,6 +83,9 @@ body {
   letter-spacing: 0.02em;
   color: #2e2f42;
 }
+.section-team {
+  background-color: #f4f4fd;
+}
 
 .additional-title {
   font-family: Roboto;
@@ -91,4 +94,34 @@ body {
   line-height: 24px;
   letter-spacing: 0.02em;
   color: #2e2f42;
+}
+.text {
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
+
+.footer-content {
+  background-color: #2e2f42;
+}
+
+.text-footer {
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+}
+
+.logo-link-footer {
+  font-family: Raleway;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 21px;
+  letter-spacing: 0.03em;
+  color: #f4f4fd;
 }
