--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 .logo-link-header {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-size: 18px;
   font-weight: 700;
   line-height: 1.17em;
@@ -73,6 +73,7 @@ body {
   background-color: #4d5ae5;
   line-height: 1.5;
   letter-spacing: 0.04em;
+  font-weight: 500;
   cursor: pointer;
 }
 
@@ -93,7 +94,7 @@ body {
   color: #2e2f42;
 }
 
-.image-content {
+.list content {
   color: #ffffff;
 }
 .section-team {
