Uodate styles.css

--- a/css/styles.css
+++ b/css/styles.css
@@ -74,7 +74,10 @@ body {
   line-height: 1.5;
   letter-spacing: 0.04em;
   font-weight: 500;
+  font-size: 16px;
+  letter-spacing: 0.04em;
   cursor: pointer;
+  font-family: 'Roboto', sans-serif;
 }
 
 .button:hover,
@@ -95,7 +98,7 @@ body {
 }
 
 .list content {
-  color: #ffffff;
+  background-color: #ffffff;
 }
 .section-team {
   background-color: #f4f4fd;
