--- a/css/styles.css
+++ b/css/styles.css
@@ -103,6 +103,9 @@ body {
 .section-team {
   background-color: #f4f4fd;
 }
+.images-content {
+  background-color: #ffffff;
+}
 
 .additional-title {
   font-family: Roboto;
