--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,19 @@
+.list {
+  list-style-type: none;
+}
+
+.nav-link {
+  text-decoration: none;
+}
+
+.adress-link {
+  text-decoration: none;
+}
+
+button {
+  cursor: pointer;
+}
+
 .logo-link-header {
   font-family: 'Raleway', sans-serif;
   font-size: 18px;
@@ -16,7 +32,7 @@ span {
   letter-spacing: 0.03em;
   color: #2e2f42;
 }
-.navigation-list-link {
+.nav-link {
   font-family: Roboto;
   font-size: 16px;
   font-weight: 500;
@@ -25,12 +41,12 @@ span {
   color: #2e2f42;
 }
 
-.navigation-list-link:hover,
-.navigation-list-link:focus {
+.nav-link:hover,
+.nav-link:focus {
   color: #404bbf;
 }
 
-.adress-list-link {
+.adress-link {
   font-family: Roboto;
   font-style: normal;
   font-size: 16px;
@@ -41,8 +57,8 @@ span {
   color: #434455;
 }
 
-.adress-list-link:hover,
-.adress-list-link:focus {
+.adress-link:hover,
+.adress-link:focus {
   color: #404bbf;
 }
 
@@ -76,7 +92,6 @@ body {
   font-weight: 500;
   font-size: 16px;
   letter-spacing: 0.04em;
-  cursor: pointer;
   font-family: 'Roboto', sans-serif;
 }
 
