--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,14 @@
   text-decoration: none;
 }
 
+body {
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  color: #434455;
+  background: #ffffff;
+}
+
+/* NAVIGATION */
 .adress-link {
   text-decoration: none;
 }
@@ -61,16 +69,9 @@ button {
 .adress-link:focus {
   color: #404bbf;
 }
+/* MAIN CONTENT */
 
-body {
-  font-family: 'Roboto', sans-serif;
-  font-size: 16px;
-}
-body {
-  color: #434455;
-  background: #ffffff;
-}
-
+/*SECTION ONE*/
 .section-one {
   background-color: #2e2f42;
 }
@@ -100,7 +101,7 @@ body {
   color: #ffffff;
   background-color: #404bbf;
 }
-
+/* SECTION THREE */
 .section-three {
   background-color: #f4f4fd;
   color: #2e2f42;
@@ -136,7 +137,7 @@ body {
   letter-spacing: 0.02em;
   color: #434455;
 }
-
+/* FOOTER */
 .footer-content {
   background-color: #2e2f42;
 }
